--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,8 +94,8 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com > ~/.ssh/known_hosts
           chmod 700 ~/.ssh && chmod 600 ~/.ssh/*
-          git config --local user.email "848026280@qq.com"
-          git config --local user.name "Alson"
+          git config --local user.email "fuzx@xmpaoyou.com"
+          git config --local user.name "傅子湘"
 
       - name: Delete gh-pages branch
         run: |
@@ -111,7 +111,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.5.0
         env:
-          ACTIONS_DEPLOY_KEY: ${{secrets.ACTIONS_DEPLOY_KEY}}
+          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./dist
         with:
