--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,7 @@ jobs:
       - name: GH Pages deploy
         uses: Cecilapp/GitHub-Pages-deploy@3.2.1\
         env:
-          - GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           email: 848026280@qq.com
           build_dir: ./dist
