--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,11 +109,12 @@ jobs:
           cp dist/index.html dist/404.html
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v2.5.0
+        uses: peaceiris/actions-gh-pages@v3
         env:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 #          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./dist
+#          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: gh-pages
+          publish_dir: ./dist
         with:
           forceOrphan: true
