--- a/.env.development
+++ b/.env.development
@@ -13,7 +13,7 @@ VITE_PUBLIC_PATH = /
 VITE_DROP_CONSOLE = false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/api˙
+VITE_GLOB_API_URL=/api
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
