chore: 生产环境配置

--- a/.env.production
+++ b/.env.production
@@ -33,3 +33,9 @@ VITE_USE_PWA = false
 
 # Is it compatible with older browsers
 VITE_LEGACY = false
+
+# spa-title
+VITE_GLOB_APP_TITLE = OA办公管理系统
+
+# spa shortname
+VITE_GLOB_APP_SHORT_NAME = vue_vben_admin
