--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,13 @@
 # Whether to open mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # public path
 VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
- VITE_PROXY = [["/api","http://localhost:3000"],["/upload","http://localhost:3300/upload"]]
-# VITE_PROXY=[["/api","http://47.99.102.3:8100/api"]]
+# VITE_PROXY = [["/api","http://localhost:3000"],["/upload","http://localhost:3300/upload"]]
+ VITE_PROXY=[["/api","http://47.99.102.3:8100/api"]]
 # VITE_PROXY=[["/api","http://10.130.0.97:8887/api"]]
 # Delete console
 VITE_DROP_CONSOLE = false
