--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "showdown": "^1.9.1",
     "sortablejs": "^1.14.0",
     "tinymce": "^5.10.2",
+    "vant": "^3.4.5",
     "vditor": "^3.8.11",
     "vue": "^3.2.29",
     "vue-i18n": "^9.1.9",
@@ -122,6 +123,7 @@
     "postcss-less": "^6.0.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.68.0",
     "rollup-plugin-visualizer": "^5.5.4",
     "stylelint": "^14.3.0",
     "stylelint-config-html": "^1.0.0",
